minor spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -45,7 +45,7 @@ code {
 }
 .wheelColumn {
   margin: auto;
-  margin-left: -10px;
+  margin-left: 0px;
   margin-right: 10vh;
   width: 80%;
   font-weight: 200;
